# ragrepository

./: main.py  pyproject.toml  repo_walk.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/repo_name='test3'/0/: replica_state.json
qdrant_storage/collections/repo_name='test3'/0/segments/2edac03d-f3ec-4ef5-a89c-6bf8cfb5aaf0/: IDENTITY  LOG
qdrant_storage/collections/repo_name='test3'/0/segments/41f1e7fe-6bfc-46d6-a424-ecfb74b31a93/: IDENTITY  LOG
qdrant_storage/collections/repo_name='test3'/0/segments/4cfcb0fe-33dd-4899-9714-d064c93fa807/: IDENTITY  LOG
qdrant_storage/collections/repo_name='test3'/0/segments/6e32b6c6-ab84-4108-8843-4cabd532c4cf/: IDENTITY  LOG
qdrant_storage/collections/repo_name='test3'/0/segments/ef7a0049-9d3f-4224-a5d4-d24d0b453f6a/: IDENTITY  LOG
qdrant_storage/collections/repo_name='test4'/0/segments/030b8588-40e8-45d7-b241-1cbbdc5c3713/: IDENTITY  LOG
qdrant_storage/collections/repo_name='test4'/0/segments/12d3c630-9512-49f0-9ac0-6689ca5c7150/: IDENTITY  LOG
qdrant_storage/collections/repo_name='test4'/0/segments/3eca2ead-f8de-42fb-973b-cb53df152233/: IDENTITY  LOG
qdrant_storage/collections/repo_name='test4'/0/segments/54187df8-cb6e-4977-84bd-8c4a394de261/: IDENTITY  LOG
qdrant_storage/collections/repo_name='test4'/0/segments/5e69fb6a-7d18-4e2b-8483-ec293eb99cbf/: IDENTITY  LOG
qdrant_storage/collections/test/: config.json
qdrant_storage/collections/test3/0/: newest_clocks.json
qdrant_storage/collections/test4/0/: newest_clocks.json
(+105 files in other folders)
