[tool.poetry]
name = "ragrepository"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.31.0"
sentence-transformers = "^3.1.1"
pymilvus = "^2.4.7"
python-multipart = "^0.0.10"
qdrant-client = "^1.11.3"
pathlib = "^1.0.1"
openai = "^1.50.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
